[package]
name = "sheets"
version = "0.1.0"
authors = ["Ezra Barrow <barrow@tilde.team>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
ndarray = { version = "0.14.0", features = ["serde"] }
bincode = "1.3.1"
serde = { version = "1.0.118", features = ["derive"] }
regex = "1"
lazy_static = "1.4.0"
