[package]
name = "sheets"
version = "0.1.0"
authors = ["Ezra Barrow <barrow@tilde.team>"]
edition = "2018"
license-file = "LICENSE"

[lib]
name = "sheets"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
ndarray = { version = "0.14.0", features = ["serde"] }
serde_json = "1.0.59"
serde = { version = "1.0.118", features = ["derive"] }
regex = "1"
lazy_static = "1.4.0"
rust_decimal = "1.9.0"
convert-base = "1.1.0"
log = "0.4.13"
simplelog = "0.9.0"
